# django-clean-architecture

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: lint.yaml
.ssh/: id_rsa  id_rsa.pub  known_hosts  known_hosts.old
src/__seedwork/domain/: entities.py  exceptions.py  validators.py  value_objects.py
src/__seedwork/test/unit/domain/: test_unit_value_objects.py
src/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_validators.py  test_unit_value_objects.py
src/category/domain/: entities.py
src/category/tests/domain/: test_entities.py
src/category/tests/unit/domain/: test_unit_entities.py
